<resources>
    <string name="app_name">CrudSQLite</string>
    <string name="informe_o_produto">Informe o produto</string>
    <string name="informe_o_tipo">Informe o tipo</string>
    <string name="informe_a_quantidade">Informe a quantidade</string>
    <string name="informe_o_pre_o">Informe o preço</string>
    <string name="adicionar">Adicionar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="listar">Listar</string>
    <string name="info">Info</string>

</resources>
